--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2749,7 +2749,7 @@ input, select, textarea {
 			}
 
 				#header > footer .icons li a {
-					color: #e2d18a;
+					color: #fafafa;
 				}
 
 		#header > nav {
